--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,10 @@
             <artifactId>stripe-java</artifactId>
             <version>22.15.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
